# turing-machine

./: CMakeLists.txt  LICENSE  compiler.cpp  executor.cpp  turing_machine.h
run_area/: a.zx
